<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.korsolution.antif.ProfileEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtEditProfileFail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/round"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/blank_person_photo" />

                <ImageView
                    android:id="@+id/imgEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/imgProfile"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/imgProfile"
                    android:background="#80000000"
                    android:src="@drawable/ic_action_edit" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_profile"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_email" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:enabled="false"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_first_name" />

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:hint="@string/hint_first_name"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_last_name" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:hint="@string/hint_last_name"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_display_name" />

            <EditText
                android:id="@+id/edtDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:hint="@string/hint_display_name"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_tel" />

            <EditText
                android:id="@+id/edtTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:hint="@string/hint_tel"
                android:inputType="phone"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_id_card" />

            <EditText
                android:id="@+id/edtIdCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:hint="@string/hint_id_card"
                android:inputType="number"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_license_exp" />

            <EditText
                android:id="@+id/edtLicenseEXP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:hint="@string/hint_license_exp"
                android:inputType="date"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_address"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_address" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:hint="@string/hint_address"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_province" />

            <Spinner
                android:id="@+id/spnProvince"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:singleLine="true"
                android:spinnerMode="dialog"></Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_amphur" />

            <Spinner
                android:id="@+id/spnAmphur"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:singleLine="true"
                android:spinnerMode="dialog"></Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_district" />

            <Spinner
                android:id="@+id/spnDistrict"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:singleLine="true"
                android:spinnerMode="dialog"></Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_postcode" />

            <EditText
                android:id="@+id/edtPostcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:hint="@string/hint_postcode"
                android:inputType="number"
                android:padding="5dp"
                android:singleLine="true" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txtEditProfileFail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnEditProfile"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/sign_up_fail"
        android:textColor="@color/Red"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_style"
        android:text="@string/str_ok"
        android:textColor="@color/White" />

</RelativeLayout>
